# Backend/app.js
@@ -1,11 +1,18 @@
-const express = require("express");
-const cors = require("cors");
-const db = require("./services/db");
+import express from 'express';
+import cors from 'cors';
+import fs from 'fs';
+import swaggerUi from 'swagger-ui-express';
+import { createRequire } from 'module';
+const require = createRequire(import.meta.url);
+const swaggerDocument = require('./services/swagger.json');
+import db from './services/db.js';
+
+
+
 
 const app = express();
 app.use(cors());
 app.use(express.json());
-
 
 app.get("/pokemon/", async (req, res) => {
     try {
@@ -16,8 +23,7 @@ app.get("/pokemon/", async (req, res) => {
     }
 });
 
-
-app.get("/Getpokemon/:id", async (req, res) => {
+app.get("/Getpokemon/:id", async (req, res) => {   // hier :id ipv {id}
     const id = parseInt(req.params.id);
     try {
         const pokemon = await db("Pokemon").where({ id }).first();
@@ -49,16 +55,16 @@ app.post("/NewPokemon", async (req, res) => {
     }
 });
 
-app.put("/updatePokemon/:id", async (req, res) => {
+app.put("/updatePokemon/:id", async (req, res) => {   // hier :id ipv {id}
     const id = parseInt(req.params.id);
     const { name, type, gigantamax } = req.body;
-    if (!name || !type || !gigantamax) {
+    if (!name || !type || gigantamax === undefined) {
         return res.status(400).json({ error: "Vul alle velden in." });
     }
     try {
         const count = await db("Pokemon")
             .where({ id })
-            .update({ name, type, gigantamax  });
+            .update({ name, type, gigantamax });
         if (count === 0) {
             return res.status(404).json({ error: "Pokemon niet gevonden." });
         }
@@ -75,21 +81,20 @@ app.put("/updatePokemon/:id", async (req, res) => {
 app.delete("/deletePokemon/:id", async (req, res) => {
     const id = parseInt(req.params.id);
     try {
-
         const deleted = await db("Pokemon").where({ id }).del();
         if (deleted === 0) {
-
             return res.status(404).json({ error: "Pokemon niet gevonden." });
         }
-
         res.status(200).json({ message: `Pokemon met ID ${id} verwijderd.` });
     } catch (err) {
         res.status(500).json({ error: "Fout bij verwijderen uit de databank." });
     }
 });
 
+
+app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+
 app.listen(3333, () => {
     console.log("Het API draait op http://localhost:3333");
 });
 
-// Put en delete moeten nog er in
